--- a/client/src/components/auth/register/Register.css
+++ b/client/src/components/auth/register/Register.css
@@ -1,58 +1,80 @@
 
-.container-auth {
-    max-width: 1100px;
-    width:60%;
-    margin: auto;
-    overflow: hidden;
-    margin-top: 6rem;
-    margin-bottom: 3rem;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.6);
-    height: 450px;
-  }
 
-
-.left-box {
-    width:50%;
-    box-sizing: border-box;
-    padding: 2.5rem;
-    height: 450px;
-    margin: auto;
-    float: left;
-}
-.form input[type="text"], input[type="password"], input[type="email"] {
-    display: block;
-    box-sizing: border-box;
-    margin-bottom: 20px;
-    padding: 0.4rem;
-    width: 22;
-    height: 32px;
-    border: none;
-    outline: none;
-    border-bottom: 1px solid #aaa;
-    font-family: sans-serif;
-    font-weight: 500;
-    font-size: 15px;
-    transition: 0.2s ease;
-}
-.right-box {
-    width:50%;
-    height:450px;
-    float:right;
-    background: url('../../../../src/img/pexels-photo-3861964.jpeg');
-    background-size: cover;
-    background-position: center;
-}
-.or{
-    top: 180px;
+.container-auth{
+    left: 50%;
     position: absolute;
-    left:48%;
-    width: 50px;
-    height: 50px;
-    background: #efefef;
-    border-radius: 50%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
-    line-height: 50px;
-    text-align: center;
-    color: #17a2b8;
-    font-weight: bold;
+    transform: translate(-50%);
+}
+
+button.social {
+   width:150px;
+   align-items: center;
+}
+
+.form-group{
+margin: 1.2rem 0;
+}
+
+.seperator-or-line{
+    width:100%;
+    text-align:center;
+    border-bottom: 1px solid rgb(95, 90, 90);
+    line-height:0.1em;
+    margin:10px 0 20px; 
+}
+.seperator-or-line span { background:#fff; padding:0 10px; }
+
+.form-group input[type="text"], input[type="password"], input[type="email"] {
+       
+  display: block;
+  width: 250px;
+  padding: 0.4rem;
+  font-size: 1.2rem;
+  border: 1px solid #ccc;
+}
+
+
+
+
+
+.social:first-child{
+    margin-bottom: 10px;
+}
+@media (max-width: 700px) {
+   
+   
+    .form{
+    display:table-cell;
+    vertical-align:middle;
+    margin:auto;
+    }
+    
+    .x-large {
+        font-size: 3rem;
+      }
+    
+      .large {
+        font-size: 2rem;
+      }
+    
+      .lead {
+        font-size: 1rem;
+      }
+    
+    .or{
+        display: none;
+    }
+  
+    .form-group input[type="text"], input[type="password"], input[type="email"] {
+       
+        display: block;
+        width: 250px;
+        padding: 0.4rem;
+        font-size: 1.2rem;
+        border: 1px solid #ccc;
+    }
+
+    button.social {
+        margin: auto;
+    }
 }
