--- a/client/src/components/landing/landing.css
+++ b/client/src/components/landing/landing.css
@@ -1,7 +1,7 @@
 .landing {
-    height: 100vh;
+    position:relative;
     background: url('../../../src/img/ballpen-blur-close-up-computer-461077.jpg') no-repeat center center/cover;
-    height: 80vh;
+    height: 65vh;
 }
 .landing-inner {
     color: #fff;
@@ -21,7 +21,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 80vh;
+    height: 65vh;
   }
   
 .lead {
@@ -37,3 +37,12 @@
     line-height: 1.2;
     margin-bottom: 1rem;
 }
+
+
+.divider
+{
+width: 70%;
+margin:15px auto;
+align-items: center;
+}
+  
