--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -22,3 +22,24 @@
     color: #17a2b8;
 }
 
+@media (max-width: 700px) {
+    .navbar {
+      display: block;
+      text-align: center;
+    }
+  
+    .navbar ul {
+      text-align: center;
+      justify-content: center;
+    }
+  
+    .navbar h1 {
+      margin-bottom: 1rem;
+    }
+  
+    .navbar .welcome {
+      display: none;
+    }
+}
+
+
