--- a/client/src/components/posts/post-form/PostForm.css
+++ b/client/src/components/posts/post-form/PostForm.css
@@ -2,10 +2,10 @@
     padding:0.5rem;
 }
 
-.form textarea{
-    display: block;
-    width: 100%;
-    padding: 0.4rem;
-    font-size: 1.2rem;
-    border: 1px solid #ccc;
+.post-form textarea{
+  display: block;
+  width: 100%;
+  padding: 0.4rem;
+  font-size: 1.2rem;
+  border: 1px solid #ccc;
 }
