--- a/client/src/components/posts/posts/Posts.css
+++ b/client/src/components/posts/posts/Posts.css
@@ -12,3 +12,13 @@
   img{
       width: 150px;
   }
+
+  @media (max-width: 700px) {
+   .post{
+    grid-template-columns: 1fr;
+   }
+
+   .post a,button{
+       padding: 0.3rem 0.4rem;
+   }
+}
