--- a/client/src/components/profiles/profile-items/ProfileItems.css
+++ b/client/src/components/profiles/profile-items/ProfileItems.css
@@ -1,9 +1,8 @@
 .profile{
     display: grid;
-    width: 75%;
     grid-template-columns: 2fr  4fr 2fr;
     align-items: center;
-    grid-gap:4rem;
+    grid-gap:2rem;
     padding:1rem;
     line-height: 1.8;
     margin-bottom: 1rem ;
@@ -13,4 +12,21 @@
     border-radius: 50%;
     width:200px;
     height: 200px;
+}
+
+@media (max-width: 700px) {
+
+.profile{
+    grid-template-columns: 1fr;
+    text-align: center;
+    align-items: center;
+}
+
+.profile ul{
+    display:none;
+}
+
+ .round-img{
+    margin:auto
+ } 
 }
