Prepare for deploy

--- a/client/src/components/profile-forms/create-profile/CreateProfile.css
+++ b/client/src/components/profile-forms/create-profile/CreateProfile.css
@@ -67,3 +67,12 @@
   .show-alert{
     margin-top:30px;
   }
+
+  @media (max-width: 700px) {
+
+    .form-profile input[type='text'],
+    .form-profile select,
+    .form-profile textarea {
+      min-width: 300px;
+    }
+}
