--- a/client/src/components/auth/social-login/SocialLogin.css
+++ b/client/src/components/auth/social-login/SocialLogin.css
@@ -1,5 +1,4 @@
 .my-facebook-button-class{
-    display: block; 
     border: 0px;
      border-radius: 3px; 
      box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 2px; 
@@ -10,6 +9,7 @@
      user-select: none; height: 50px; 
      background: rgb(59, 89, 152);
      text-align:left;
+     display: hide;
 }
 
 .my-facebook-button-class:hover{
