--- a/client/src/components/landing/landing.css
+++ b/client/src/components/landing/landing.css
@@ -2,6 +2,7 @@
     position:relative;
     background: url('../../../src/img/ballpen-blur-close-up-computer-461077.jpg') no-repeat center center/cover;
     height: 65vh;
+    display: block;
 }
 .landing-inner {
     color: #fff;
@@ -37,6 +38,7 @@
     line-height: 1.2;
     margin-bottom: 1rem;
 }
+
 
 
 .divider
