--- a/client/src/components/profile-forms/add-education/AddEducation.css
+++ b/client/src/components/profile-forms/add-education/AddEducation.css
@@ -1,3 +1,12 @@
 .edu-fields{
     display: flex;
 }
+
+
+ input[type='date'] {
+  display: block;
+  width: 100%;
+  padding: 0.4rem;
+  font-size: 1.2rem;
+  border: 1px solid #ccc;
+}
