--- a/client/src/components/auth/register/Register.css
+++ b/client/src/components/auth/register/Register.css
@@ -1,9 +1,9 @@
 
 
 .container-auth{
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%);
+    position: relative;
+    margin: auto;
+    width:30%;
 }
 
 button.social {
@@ -20,7 +20,6 @@ margin: 1.2rem 0;
     text-align:center;
     border-bottom: 1px solid rgb(95, 90, 90);
     line-height:0.1em;
-    margin:10px 0 20px; 
 }
 .seperator-or-line span { background:#fff; padding:0 10px; }
 
