--- a/client/src/components/profile/profile/Profile.css
+++ b/client/src/components/profile/profile/Profile.css
@@ -19,7 +19,7 @@
 }
 
 .profile-top img {
-    width: 200px;
+    width: 250px;
 }
 
 .profile-top .icons a {
@@ -46,15 +46,10 @@ margin: 0 0.3rem;
   }
   
   .profile-github .repo > div:first-child {
-    flex: 3;
+    flex: 7;
     flex-basis: 70%;
   }
 
-  .profile-github > div:last-child {
-    flex: 3;
-    flex-basis: 20%;
-  }
-  
 .profile-about .skills {
     display: flex;
     align-items: center;
@@ -75,6 +70,10 @@ margin: 0 0.3rem;
   grid-area: edu;
 }
 
+.profile-exp h2,
+.profile-edu h2 {
+  margin-bottom: 1rem;
+}
 
 .profile-exp > div,
 .profile-edu > div {
