--- a/client/src/components/auth/register/Register.css
+++ b/client/src/components/auth/register/Register.css
@@ -4,15 +4,17 @@
     position: relative;
     margin: auto;
     width:30%;
+    min-width: 300px;
 }
 
-button.social {
-   width:150px;
-   align-items: center;
+.social {
+  align-items: center;
+  text-align:center;
+  width: 95%;
 }
 
 .form-group{
-margin: 1.2rem 0;
+  margin: 1.2rem 0;
 }
 
 .seperator-or-line{
@@ -41,12 +43,24 @@ margin: 1.2rem 0;
 }
 @media (max-width: 700px) {
    
-   
-    .form{
-    display:table-cell;
-    vertical-align:middle;
+  .container-auth{
+    text-align: center;
+    width:50%;
+    min-width: 300px;
+}
+
+
+.form{
+  display: inline-block;
+}
+  .form .form-group input[type="text"], input[type="password"], input[type="email"] {
     margin:auto;
-    }
+    display: block;
+    width: 200px;
+    padding: 0.4rem;
+    font-size: 1.2rem;
+    border: 1px solid #ccc;
+  }
     
     .x-large {
         font-size: 3rem;
@@ -63,15 +77,7 @@ margin: 1.2rem 0;
     .or{
         display: none;
     }
-  
-    .form-group input[type="text"], input[type="password"], input[type="email"] {
-       
-        display: block;
-        width: 250px;
-        padding: 0.4rem;
-        font-size: 1.2rem;
-        border: 1px solid #ccc;
-    }
+
 
     button.social {
         margin: auto;
